fix(Avatar behind the underline): Added z-index

--- a/src/styles/components/_content.scss
+++ b/src/styles/components/_content.scss
@@ -65,6 +65,7 @@
       position: absolute;
       top: 0;
       left: 0;
+      z-index: 1;
       display: block;
       width: 100%;
       height: 100%;
